[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2018"
name = "rust-napi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.0"
napi-derive = "2"
napi-sys = "2.1.0"
js-sys = "0.3.54"

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1.2"

[profile.release]
lto = true
